# lludens

./: .gitignore  README.md  pyproject.toml
lludens/: agent.py  environments.py
notebooks/: basic.ipynb  conjoint.ipynb  economic_games.ipynb
