[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lludens"
version = "0.1.0"
authors = [{ name = "Apoorva Lal", email = "lal.apoorva@gmail.com" }]
description = "lludens simulates economic games with LLMs via the llm package."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["llm", "numpy"]

[project.urls]
Homepage = "https://github.com/apoorvalal/lludens"

[tool.setuptools.packages]
find = {exclude = ["notebooks"]}
